Fixed gap in footer

--- a/src/styles/footer/nav.scss
+++ b/src/styles/footer/nav.scss
@@ -4,6 +4,12 @@
   }
 
   &__item-footer--second {
+    margin-left: 200px;
+  }
+}
+
+@include onTVMini {
+  .nav__item-footer--second {
     margin-left: 20px;
   }
 }
